--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "dlnrdovtboolo7yo",
-    "password": "iph5e2u3f4emj4lf",
-    "database": "fwfn7bo9qdjxr5ie",
-    "host": "blonze2d5mrbmcgf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "npprdbd80dgpeyl7",
+    "password": "nejl5x1zt88h680k",
+    "database": "r8zcigqlsnjw96ld",
+    "host": "b4e9xxkxnpu2v96i.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
