--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.1",
     "path": "^0.12.7",
     "sequelize": "^4.38.0"
   }
