--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "mysql": "^2.16.0",
     "mysql2": "^1.6.1",
     "path": "^0.12.7",
-    "sequelize": "^4.38.0"
+    "sequelize": "^5.3.0""
   }
 }
